# vpi_101

./: README.md
c/: CMakeLists.txt  requirements.txt  step001_blurandsave.cpp
python/: pyside_test.py  requirements.txt  step001_blurandsave.py  step002_csiinblurout.py
